--- a/.gitignore
+++ b/.gitignore
@@ -29,15 +29,15 @@ hs_err_pid*
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
 ## User settings
-xcuserdata/
-
+RecuH2O/xcuserdata/
+RecuH2O/DerivedData/*
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
 *.xccheckout
 
 ## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
-build/
-DerivedData/
+RecuH2O/build/
+RecuH2O/DerivedData/
 *.moved-aside
 *.pbxuser
 !default.pbxuser
