deplacement de l'ancien fichier arduino vers _old
Signed-off-by: darthjuda <mehdi.jung@me.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.gitignore
+
 ### Kotlin ###
 # Compiled class file
 *.class
@@ -60,3 +62,6 @@ RecuH2O/DerivedData/
 
 ### Env & Secrets ###
 .env
+
+### Mac OsX ###
+.DS_STORE
